# trinci-core

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.gitlab/issue_templates/: issue.md
src/: channel.rs  error.rs  lib.rs  macros.rs
src/base/: mod.rs  queue_set.rs  schema.rs  serialize.rs
src/blockchain/: aligner.rs  builder.rs  dispatcher.rs  executor.rs  indexer.rs  message.rs  mod.rs  pool.rs  pubsub.rs  read_only_executor.rs  service.rs  synchronizer.rs  worker.rs
src/bridge/: mod.rs  service.rs  worker.rs
src/crypto/: drand.rs  ecdsa.rs  ed25519.rs  hash.rs  mod.rs  sign.rs  tpm2.rs
src/db/: mod.rs  rocks.rs
src/kafka/: mod.rs  service.rs  worker.rs
src/misc/: mod.rs  tpm.rs
src/network_monitor/: mod.rs  tools.rs  types.rs
src/p2p/: behaviour.rs  mod.rs  service.rs  truster.rs  worker.rs
src/rest/: mod.rs  service.rs  worker.rs
src/tpm/: service.rs
src/tpm2/: mod.rs  tpm2.rs
src/wm/: host_func.rs  local.rs  mod.rs  test.wasm
