[package]
name = "trinci-core"
version = "0.2.8"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2021"
description = "TRINCI Blockchain Core"
keywords = ["trinci", "blockchain", "core"]

[dependencies]
# Foundations
log = "0.4.14"
bs58 = "0.4.0"
hex = "0.4.3"
bitflags = "1.2.1"
async-std = "1.9.0"
futures = "0.3.15"
parking_lot = "0.12.0"
# rand needs to stay at 0.7 for ed25519-dalek
rand = "0.7"
# Serialization
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
rmp-serde = "1.0.0"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
serde_json = { version = "1.0", optional = true }
# Cryptography primitives
ring = { version = "0.16.20", default-features = false, features = ["std"] }
ed25519-dalek = "1.0.1"
# Exonum MerkleDB
merkledb = { git = "https://github.com/affidaty-blockchain/merkledb", default-features = false, features = [
    "rocksdb_snappy",
    "sodiumoxide-crypto",
], optional = true }

# WasmTime
wasmtime = { version = "0.35.1", default-features = false, features = [
    "parallel-compilation",
    "cranelift",
], optional = true }
# P2P framework
libp2p = { version = "0.44.0", default-features = false, features = [
    "tcp-async-io",
    "mplex",
    "plaintext",
    "mdns",
    "kad",
    "gossipsub",
    "identify",
    "request-response",
], optional = true }
# HTTP framework
tide = { version = "0.16", default-features = false, features = [
    "h1-server",
], optional = true }
# TPM2 interaction
tss-esapi = { version = "6.1.1", default-features = false, optional = true }
tss-esapi-sys = { version = "0.2.0", default-features = false, optional = true }
# Drand 
rand_pcg = "0.3.1"
rand_core = "0.6.3"
# POST
isahc = { version = "1.6.0", optional = true }

# Indexer
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
], optional = true }
curl = { version = "0.4", optional = true }


[dev-dependencies]
lazy_static = "1.4.0"
mockall = "0.11.0"
tempfile = "3.2.0"
ureq = { version = "2.1.1", default-features = false }


[features]
default = ["with-rocksdb", "with-wasmtime", "p2p", "rest", "bridge"]
indexer = ["serde_json", "uuid", "curl"]
with-rocksdb = ["merkledb"]
with-wasmtime = ["wasmtime"]
p2p = ["libp2p"]
rest = ["tide"]
bridge = []
tpm2 = ["tss-esapi", "tss-esapi-sys"]
rt-monitor = ["serde_json", "isahc"]
